--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -6,14 +6,24 @@
     <title>Index</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" href="/img/weather.png">
-    <script src="./js/javascript.js"></script>
+    
 </head>
 <body>
     <div class="main-content">
         {{>header}}
         <p>Use this site to get your weather</p>
+
+        <form action="get">
+            <input type="text" name="address" id="addressSearchBar">
+            <button>Search</button>
+        </form>
+
+        <p id='result-1'></p>
+        <p id='result-2'></p>
     </div>
     
     {{>footer}}
+
+    <script src="/js/app.js"></script>
 </body>
 </html>
